refactor: move resume entity to other directory

--- a/Aeon Web.csproj
+++ b/Aeon Web.csproj
@@ -22,4 +22,10 @@
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Vacancies\Catalog.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Vacancies\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Vacancies\Index.cshtml" />
+    </ItemGroup>
+
 </Project>
